--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://akanetsuzura.github.io/TFT_Item_Finder/",
   "name": "tft-item-app",
   "version": "0.1.0",
   "private": true,
